chore: 添加 Mockito Java 21 支持配置